# swift-clang

./: CMakeLists.txt  README.txt
include/clang-c/: Index.h
include/indexstore/: indexstore.h
lib/APINotes/: APINotesFormat.h  APINotesReader.cpp  APINotesWriter.cpp  APINotesYAMLCompiler.cpp
lib/AST/: ASTContext.cpp  Decl.cpp  ExprCXX.cpp  MicrosoftMangle.cpp  Type.cpp  TypePrinter.cpp
lib/Analysis/: ReachableCode.cpp
lib/Basic/: CMakeLists.txt  FileManager.cpp  FileSystemStatCache.cpp  InMemoryOutputFileSystem.cpp  Module.cpp  SourceManager.cpp  Targets.cpp
lib/CodeGen/: ABIInfo.h  BackendUtil.cpp  CGBlocks.cpp  CGBuiltin.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGExprScalar.cpp  CGObjCMac.cpp  CodeGenABITypes.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CoverageMappingGen.cpp  ItaniumCXXABI.cpp  ModuleBuilder.cpp  ObjectFilePCHContainerOperations.cpp  SwiftCallingConv.cpp  TargetInfo.cpp
lib/DirectoryWatcher/: CMakeLists.txt  DirectoryWatcher-linux.inc.h  DirectoryWatcher-mac.inc.h  DirectoryWatcher.cpp
lib/Driver/: Driver.cpp  Job.cpp  ToolChains.cpp  Tools.cpp
lib/Edit/: FillInMissingSwitchEnumCases.cpp
lib/Frontend/: ASTUnit.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  DependencyFile.cpp  FrontendAction.cpp  ModuleDependencyCollector.cpp
lib/Headers/: avx2intrin.h  avxintrin.h  emmintrin.h  intrin.h  smmintrin.h
lib/Index/: CMakeLists.txt  ClangIndexRecordWriter.cpp  ClangIndexRecordWriter.h  FileIndexRecord.cpp  IndexDataStoreUtils.cpp  IndexRecordHasher.cpp  (+4 more)
runtime/: CMakeLists.txt
tools/: CMakeLists.txt
(+114 files in other folders)
